--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,11 @@
     <tr>
       <th>Email</th>
       <th>Password</th>
+      <th>Name</th>
+      <th>Biography</th>
+      <th>Education</th>  
+      <th>Phone</th>
+      <th>Birthdate</th>          
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +21,11 @@
       <tr>
         <td><%= user.email %></td>
         <td><%= user.password %></td>
+        <td><%= user.name %></td>
+        <td><%= user.biography %></td>
+        <td><%= user.education %></td>
+        <td><%= user.phone %></td>   
+        <td><%= user.birthdate %></td>     
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
