--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,26 @@
   <strong>Password:</strong>
   <%= @user.password %>
 </p>
+<p>
+  <strong>Name:</strong>
+  <%= @user.name %>
+</p>
+<p>
+  <strong>Biography:</strong>
+  <%= @user.biography %>
+</p>
+<p>
+  <strong>Education:</strong>
+  <%= @user.education %>
+</p>
+<p>
+  <strong>Phone:</strong>
+  <%= @user.phone %>
+</p>
+<p>
+  <strong>Birthdate:</strong>
+  <%= @user.birthdate %>
+</p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
